# hypercube-verifier

./: .gitignore  Cargo.toml  LICENSE-APACHE  README.md
.github/actions/setup/: action.yml
.github/workflows/: pr.yml
cli/: Cargo.toml
cli/src/: main.rs
crates/algebra/: Cargo.toml
crates/algebra/src/: lib.rs  univariate.rs
crates/alloc/: Cargo.toml
crates/alloc/src/: allocator.rs  buffer.rs  init.rs  lib.rs  mem.rs  raw_buffer.rs  slice.rs
crates/alloc/src/backend/: cpu.rs  io.rs  mod.rs
crates/basefold/: Cargo.toml
crates/basefold/src/: code.rs  config.rs  lib.rs  verifier.rs
crates/commit/: Cargo.toml
crates/commit/src/: lib.rs  message.rs  rounds.rs  tensor_cs.rs
crates/derive/: Cargo.toml
crates/derive/src/: lib.rs
crates/jagged/: Cargo.toml
crates/jagged/src/: basefold.rs  config.rs  lib.rs  poly.rs  verifier.rs
crates/jagged/src/jagged_eval/: mod.rs  sumcheck_eval.rs  trivial_eval.rs
crates/merkle-tree/: Cargo.toml
crates/merkle-tree/src/: baby_bear_poseidon2.rs  bn254fr_poseidon2.rs  lib.rs  tcs.rs
crates/multilinear/: Cargo.toml
crates/multilinear/src/: base.rs  eval.rs  lagrange.rs  lib.rs  mle.rs  pcs.rs  point.rs
crates/primitives/: Cargo.toml
crates/primitives/src/: consts.rs  io.rs  lib.rs  types.rs
crates/recursion/circuit/: Cargo.toml
crates/recursion/circuit/src/: challenger.rs  hash.rs  lib.rs  logup_gkr.rs  shard.rs  symbolic.rs  utils.rs  witness.rs  zerocheck.rs
crates/recursion/circuit/src/basefold/: merkle_tree.rs  mod.rs  stacked.rs  tcs.rs  witness.rs
crates/recursion/circuit/src/dummy/: jagged.rs  logup_gkr.rs  mod.rs  shard_proof.rs  sumcheck.rs
crates/recursion/circuit/src/jagged/: jagged_eval.rs  mod.rs  verifier.rs  witness.rs
crates/recursion/circuit/src/machine/: complete.rs  compress.rs  core.rs  deferred.rs  mod.rs  public_values.rs  root.rs  vkey_proof.rs  witness.rs  wrap.rs
crates/recursion/circuit/src/sumcheck/: mod.rs  witness.rs
crates/recursion/compiler/: Cargo.toml
crates/recursion/compiler/src/: config.rs  lib.rs
crates/recursion/compiler/src/circuit/: builder.rs
crates/recursion/compiler/src/ir/: bits.rs  builder.rs  fold.rs  instructions.rs  poseidon.rs  symbolic.rs
crates/recursion/derive/: Cargo.toml
crates/recursion/executor/: Cargo.toml
crates/recursion/executor/src/: analyzed.rs  block.rs  instruction.rs  lib.rs  program.rs  public_values.rs  record.rs  shape.rs
crates/recursion/machine/: Cargo.toml
crates/recursion/machine/cpp/: extern.cpp
crates/recursion/machine/include/: alu_base.hpp  alu_ext.hpp  poseidon2.hpp  poseidon2_constants.hpp  poseidon2_skinny.hpp  poseidon2_wide.hpp  prelude.hpp  public_values.hpp  select.hpp  sys.hpp
crates/recursion/machine/src/: builder.rs  lib.rs  machine.rs  sys.rs  verify_compress.rs
crates/recursion/machine/src/chips/: alu_base.rs  alu_ext.rs  mod.rs  prefix_sum_checks.rs  public_values.rs  select.rs
crates/recursion/machine/src/chips/mem/: constant.rs  mod.rs  variable.rs
crates/recursion/machine/src/chips/poseidon2_wide/: air.rs  mod.rs  permutation.rs  trace.rs
crates/recursion/machine/src/chips/poseidon2_wide/columns/: preprocessed.rs
crates/stacked/: Cargo.toml
crates/stacked/src/: interleave.rs  lib.rs  verifier.rs
crates/stark/: CHANGELOG.md  Cargo.toml
crates/stark/src/: chip.rs  folder.rs  lib.rs  machine.rs  public_values.rs  record.rs  septic_curve.rs  septic_digest.rs  septic_extension.rs  util.rs  word.rs
crates/stark/src/air/: builder.rs  machine.rs  mod.rs  public_values.rs  sub_builder.rs
crates/stark/src/logup_gkr/: proof.rs  verifier.rs
crates/stark/src/lookup/: builder.rs  debug.rs  interaction.rs
crates/stark/src/verifier/: config.rs  mod.rs  proof.rs  shard.rs
crates/sumcheck/: Cargo.toml
crates/sumcheck/src/: lib.rs  proof.rs  verifier.rs
crates/tensor/: Cargo.toml
crates/tensor/src/: dimensions.rs  inner.rs  lib.rs
crates/utils/: Cargo.toml
crates/utils/src/: lib.rs
