[package]
name = "cli"
version.workspace = true
edition.workspace = true

repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
p3-field = { workspace = true }
hypercube-recursion-machine = {workspace = true}
hypercube-stark = {workspace = true}
bincode = "1.3.3"
clap = { version = "4.5.9", features = ["derive", "env"] }
itertools = {workspace = true}
[lints]
workspace = true
