[package]
name = "cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
hypercube-recursion-machine = {workspace = true}
bincode = "1.3.3"
clap = { version = "4.5.9", features = ["derive", "env"] }
ratatui = "0.29.0"
[lints]
workspace = true
