[package]
name = "slop-algebra"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
p3-field = { workspace = true }
serde = "1.0.210"

[dev-dependencies]
p3-baby-bear = { workspace = true }