[package]
name = "slop-alloc"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
p3-baby-bear = { workspace = true }
p3-field = { workspace = true }
slop-algebra = { workspace = true }

thiserror = { workspace = true }
serde = { workspace = true }
itertools = { workspace = true }

[lints]
workspace = true
