[package]
name = "hypercube-alloc"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
p3-field = { workspace = true }

thiserror = { workspace = true }
serde = { workspace = true }

[lints]
workspace = true
