[package]
name = "slop-basefold"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
p3-field = { workspace = true }
slop-multilinear = { workspace = true }
p3-challenger = { workspace = true }
slop-utils = { workspace = true }
slop-commit = { workspace = true }
slop-tensor = { workspace = true }
slop-alloc = { workspace = true }
p3-baby-bear = { workspace = true }
slop-merkle-tree = { workspace = true }

thiserror = "1.0"
itertools = "0.12.0"
serde = { version = "1.0.207", features = ["derive"] }
derive-where = { workspace = true }

[dev-dependencies]
p3-baby-bear = { workspace = true }
