[package]
name = "slop-jagged"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
slop-multilinear = { workspace = true }
p3-baby-bear = { workspace = true }
slop-sumcheck = { workspace = true }
p3-field = { workspace = true }
p3-challenger = { workspace = true }
slop-stacked = { workspace = true }
slop-basefold = { workspace = true }
rayon = "1.5.0"
serde = { workspace = true, features = ["rc"] }
thiserror = { workspace = true }

[dev-dependencies]
p3-baby-bear = { workspace = true }
