[package]
name = "slop-merkle-tree"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
p3-merkle-tree = { workspace = true }
# slop-futures = { workspace = true }

slop-commit = { workspace = true }
p3-symmetric = { workspace = true }
p3-poseidon2 = { workspace = true }
p3-baby-bear = { workspace = true }
p3-field = { workspace = true }
slop-tensor = { workspace = true }

thiserror = { workspace = true }
serde = { workspace = true }
lazy_static = "1.5.0"
itertools = { workspace = true }


[dev-dependencies]
