[package]
name = "slop-stacked"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
slop-multilinear = { workspace = true }
slop-commit = { workspace = true }

thiserror = { workspace = true }
serde = { workspace = true }

[dev-dependencies]

[lints]
workspace = true
