[package]
name = "slop-sumcheck"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
p3-challenger = { workspace = true }

slop-algebra = { workspace = true }
p3-field = { workspace = true }
slop-multilinear = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }


