[package]
name = "hypercube-sumcheck"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
p3-challenger = { workspace = true }

hypercube-algebra = { workspace = true }
p3-field = { workspace = true }
hypercube-multilinear = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }


