[package]
name = "hypercube-recursion-circuit"
description = "SP1 is a performant, 100% open-source, contributor-friendly zkVM."
readme = "../../../README.md"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }

[dependencies]
p3-air = { workspace = true }
p3-commit = { workspace = true }
p3-matrix = { workspace = true }
p3-util = { workspace = true }
p3-symmetric = { workspace = true }
p3-challenger = { workspace = true }
p3-baby-bear = { workspace = true }
p3-dft = { workspace = true }
p3-bn254-fr = { workspace = true }
p3-uni-stark = { workspace = true }
slop-alloc = { workspace = true }
slop-jagged = { workspace = true }
slop-commit = { workspace = true }
slop-merkle-tree = { workspace = true }
slop-basefold = { workspace = true }
slop-algebra = { workspace = true }
slop-multilinear = { workspace = true }
slop-sumcheck = { workspace = true }
slop-stacked = { workspace = true }
hypercube-stark = { workspace = true }
sp1-derive = { workspace = true }
hypercube-recursion-compiler = { workspace = true }
hypercube-recursion-machine = { workspace = true }
sp1-primitives = { workspace = true }
slop-tensor = { workspace = true }
tokio = { workspace = true }
hypercube-recursion-executor = { workspace = true }
p3-field = { workspace = true }

itertools = { workspace = true }
serde = { workspace = true, features = ["derive"] }
rand = "0.8.5"
tracing = { workspace = true }
hashbrown = { workspace = true, features = ["serde", "inline-more"] }
num-traits = "0.2.19"
rayon = "1.10.0"
derive-where = "1.2.7"

[dev-dependencies]
# sp1-core-executor = { workspace = true }
# hypercube-stark = { workspace = true, features = ["test-proof"] }
# sp1-recursion-machine = { workspace = true }
# sp1-recursion-gnark-ffi = { workspace = true }
ff = { version = "0.13", features = ["derive", "derive_bits"] }
p3-challenger = { workspace = true }
p3-symmetric = { workspace = true }
p3-dft = { workspace = true }
p3-merkle-tree = { workspace = true }
p3-poseidon2 = { workspace = true }
zkhash = "0.2.0"
rand = "0.8.5"
futures = "0.3.31"
# test-artifacts = { workspace = true }
bincode = "1.3.3"

# [features]
# Enables debug features in dependencies.
# debug = [ "hypercube-recursion-compiler/debug"]

[lints]
workspace = true
